documentation/aansluitingenregister/1.2/modules/ROOT/pages/index.adoc
= Aansluitingenregister
:table-caption!:
:table-grid: rows
:parent: Aansluitingenregister

_Het aansluitingenregister bevat alle elektriciteits- en gasaansluitingen in Nederland._

Het aansluitingenregister wordt gezamenlijk beheerd door de netbeheerders en bevat zowel fysieke als administratieve gegevens over aansluitingen. Het register is essentieel voor de werking van de energiemarkt omdat het de basis vormt voor processen zoals leverancierswisselingen, verhuizingen en facturatie.

De verplichting tot het bijhouden van het aansluitingenregister is vastgelegd in de Informatiecode elektriciteit en gas, vastgesteld door de Autoriteit Consument en Markt (ACM).

NBility: https://nbility-model.github.io/NBility-business-capabilities-Archi/?view=id-8becf2d90261476faa9d53240e6cf2c8[C.6.2.1. Aansluitingen/allocatiepunten beheren]

.Zie ook
[%collapsible]
====
* https://www.youtube.com/watch?v=z7eVPSKf8l8[youtube:z7eVPSKf8l8]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&z=2025-01-01&g=2025-01-01[iceg:hoofdstuk=2&paragraaf=2.1&z=2025-01-01&g=2025-01-01]
====

image::aansluitingenregister.drawio.svg[id=conceptual-model]

xref::attachment$aansluitingenregister.linkml.yml[LinkML-broncode]




[[Aansluiting]]
== Aansluiting

_https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluiting[begrip:aansluiting]_

Een koppeling met een gesloten distributiesysteem wordt in dit register beschouwd als aansluiting als de beheerder geen gebruik maakt van het elektronische berichtenverkeer ten behoeve van het faciliteren van derdentoegang (zie artikel 2.4, vierde lid van de Netcode elektriciteit).

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]EAN-code
| tekst [1]
a| _unieke cijfercombinatie volgens de Europese Artikelnummer-standaard_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====
| energiedrager
| <<local:Energiedrager,Energiedrager>> [0..1]
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/energiedrager[begrip:energiedrager]_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====
| gecontracteerde transportcapaciteit
| tekst [0..1]
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/gecontracteerde-transportcapaciteit[begrip:gecontracteerde-transportcapaciteit]_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037951&hoofdstuk=3&paragraaf=3.7&artikel=3.7.4&z=2022-05-18&g=2022-05-18[tce:hoofdstuk=3&paragraaf=3.7&artikel=3.7.4&z=2022-05-18&g=2022-05-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037948&hoofdstuk=2&paragraaf=2.6&artikel=2.33&z=2023-05-02&g=2023-05-02[tcg:hoofdstuk=2&paragraaf=2.6&artikel=2.33&z=2023-05-02&g=2023-05-02]
====
| marktsegment
| <<local:Marktsegment,Marktsegment>> [1]
a| _aanduiding van de categorie waartoe de aansluiting behoort, te weten kleinverbruikaansluiting of grootverbruikaansluiting_

Een aansluiting met een kleine capaciteit kan onder voorwaarden worden beschouwd als grootverbruikaansluiting, bijvoorbeeld als het een aansluiting betreft op een gesloten distributiesysteem of een aansluiting zoals bedoeld in artikel 1, lid 2 of 3 van de Elektriciteitswet 1998.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037938&hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25[bce:hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25]
====
| technische grootte
| <<local:Technische-grootte,Technische grootte>> [1]
a| _aanduiding van het formaat van de aansluiting op basis van de gewenste aansluitcapaciteiten van de overdrachtspunten_

De historische aanduiding 'artikel-1-lid-2-of-3-aansluiting' is nu afleidbaar uit de combinatie van 'grootte' en 'marktsegment'.

Validatie: als de gewenste aansluitcapaciteit van een van de overdrachtspunten 'groot' is of een geheel getal dan 'groot' anders 'klein'.
| uitsluitend elektriciteitsproductie-eenheden
| waar of onwaar [1]
a| _geeft aan of achter een aansluiting zich uitsluitend elektriciteitsproductie-eenheden bevinden en geen ander verbruik dan het eigen verbruik van de desbetreffende elektriciteitsproductie-eenheden_

Ook wel bekend als 'zuivere teruglevering'.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037951&hoofdstuk=3&paragraaf=3.7&artikel=3.7.13.b&z=2022-05-18&g=2022-05-18[tce:hoofdstuk=3&paragraaf=3.7&artikel=3.7.13.b&z=2022-05-18&g=2022-05-18]
====
| unieke EAN-code bij MLOEA
| tekst [0..1]
a| _EAN-code die ongelijk is aan die van een allocatiepunt_

MLOEA staat voor meerdere leveranciers op een aansluiting. Het is een configuratie waarbij een aansluiting meer dan één allocatiepunt heeft. Omdat de aansluiting en het primaire allocatiepunt (PAP) dezelfde EAN-code delen, helpt de unieke EAN-code expliciet te maken dat het om de aansluiting gaat. Deze EAN-code staat ook wel bekend als virtueel allocatiepunt (VAP) of overdrachtspunt MLOEA (OPM), terwijl het geen allocatiepunt of overdrachtspunt betreft. Als in het berichtenverkeer tussen netbeheerder en meetverantwoordelijke voortaan expliciet wordt gemaakt welk entiteittype men bedoeld (aansluiting of allocatiepunt), dan is de unieke EAN-code niet meer nodig.
| weekmax
| waar of onwaar [0..1]
a| _geeft aan of de kWmax per week gemeten moet worden_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037951&hoofdstuk=3&paragraaf=3.7&artikel=3.7.5a&z=2022-05-18&g=2022-05-18[tce:hoofdstuk=3&paragraaf=3.7&artikel=3.7.5a&z=2022-05-18&g=2022-05-18]
====

|===



.Relaties
[%autowidth.stretch]
|===
| Aansluiting is ... | Omschrijving

| beheerd door https://modellen.netbeheernederland.nl/marktpartijenregister#Marktpartijsubregistratie[Marktpartijsubregistratie] (Marktpartijenregister) [* → 1]
a| _geeft aan welke netbeheerder de aansluiting beheert_
| deel van <<Netgebied,Netgebied>> [* → 0..1]
a| Validatie: deze relatie is verplicht als een van de allocatiepunten 'in bedrijf' is.

Validatie: aansluiting en netgebied hebben dezelfde beheerder.

|===






[[Aansluitlocatie]]
== Aansluitlocatie

_https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluitlocatie[begrip:aansluitlocatie]_

Adresgegevens zijn zo veel mogelijk overeenkomstig NEN 5825.

Tijdlijnen: geldigheid, registratie, effectuering

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2023-06-28&g=2023-06-28]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]huisnummer
| geheel getal [1]
a| _aan een verblijfsobject, standplaats of ligplaats toegekend nummer, een antwoordnummer of een postbusnummer_ (zie https://www.nen.nl/nen-5825-2002-nl-83617[nen:nen-5825-2002-nl-83617])
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]huisnummertoevoeging
| tekst [0..1]
a| _aan een verblijfsobject, standplaats of ligplaats toegekende nadere toevoeging aan een huisnummer inclusief huisletter_ (zie https://www.nen.nl/nen-5825-2002-nl-83617[nen:nen-5825-2002-nl-83617])
| landcode
| tekst [1]
a| _identificatie van een land met twee letters conform ISO 3166-1_ (zie https://www.iso.org/iso-3166-country-codes.html[iso:iso-3166-country-codes.html])
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]locatienummer
| tekst [1]
a| _identificatie van een aansluitlocatie_
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]locatieomschrijving
| tekst [0..1]
a| _omschrijving van de ligging van een aansluitlocatie, eventueel ten opzichte van een nabijgelegen adres_
| postcode
| tekst [1]
a| _reeks tekens die in een postadres wordt opgenomen om het automatisch sorteren van de post gemakkelijker te maken_ (zie https://www.nen.nl/nen-5825-2002-nl-83617[nen:nen-5825-2002-nl-83617])
| soort
| tekst [0..1]
a| _aanduiding van een verzameling aansluitlocaties die een gemeenschappelijk karakter hebben_

Mogelijke waarden afstemmen op de geobasisregistraties. Zie bijvoorbeeld https://docs.geostandaarden.nl/disgeo/emso/.
| straatnaam
| tekst [1]
a| _naam om openbare ruimten zoals straten, lanen, wegen en stegen mee aan te duiden, of 'antwoordnummer' of 'postbus'_ (zie https://www.nen.nl/nen-5825-2002-nl-83617[nen:nen-5825-2002-nl-83617])
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]toegangsinstructie
| tekst [0..1]
a| _beschrijving van wat je moet doen om een locatie binnen te kunnen of mogen gaan_
| verdieping toegang
| geheel getal [0..1]
a| _aanduiding op welke verdieping de toegangsdeur van de aansluitlocatie zich bevindt_ (zie https://www.amsterdam.nl/stelselpedia/bag-index/catalogus-bag/objectklasse-vbo/kenmerk-bouwlaag/[adamstelsel:bag-index/catalogus-bag/objectklasse-vbo/kenmerk-bouwlaag/])

Dit gegeven helpt bij het snel lokaliseren van storingen in hoogbouw.

De begande grond geldt als 0. Als de toegang meer dan 1,5 m onder het maaiveld ligt, wordt als verdieping -1 aangemerkt.
| woonplaatsnaam
| tekst [1]
a| _aanduiding van een gebied met bewoning zoals een stad of dorp_ (zie https://www.nen.nl/nen-5825-2002-nl-83617[nen:nen-5825-2002-nl-83617])
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]x-coördinaat
| reëel getal{nbsp}(m) [0..1]
a| _oost-westpositie van een punt in het Rijksdriehoeksstelsel (RD)_
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]y-coördinaat
| reëel getal{nbsp}(m) [0..1]
a| _noord-zuidpositie van een punt in het Rijksdriehoeksstelsel (RD)_

|===



.Relaties
[%autowidth.stretch]
|===
| Aansluitlocatie is ... | Omschrijving

| in nabijheid van http://opendata.stelselcatalogus.nl/bag/id/begrip/nummeraanduiding[Nummeraanduiding] (Basisregistratie Adressen en Gebouwen) [* → 0..1]
a| 
| in zelfde onroerende zaak als óf http://opendata.stelselcatalogus.nl/bag/id/begrip/verblijfsobject[Verblijfsobject] (Basisregistratie Adressen en Gebouwen){nbsp}óf http://opendata.stelselcatalogus.nl/bag/id/begrip/standplaats[Standplaats] (Basisregistratie Adressen en Gebouwen){nbsp}óf http://opendata.stelselcatalogus.nl/bag/id/begrip/ligplaats[Ligplaats] (Basisregistratie Adressen en Gebouwen){nbsp}óf http://opendata.stelselcatalogus.nl/bag/id/begrip/pand[Pand] (Basisregistratie Adressen en Gebouwen){nbsp}óf http://opendata.stelselcatalogus.nl/bgt/id/begrip/imgeo_object[Grootschalig topografisch object] (Basisregistratie Grootschalige Topografie){nbsp}óf http://opendata.stelselcatalogus.nl/brk/id/begrip/perceel[Perceel] (Basisregistratie Kadaster) [* → 0..1]
a| Verwijzen naar de basisregistraties kan met het patroon beschreven in NEN 3610: met 'domein' en 'identificatie', waar het domein in dit geval kan zijn: NL.IMBAG.Verblijfsobject NL.IMBAG.Standplaats, NL.IMBAG.Ligplaats, NL.IMBAG.Pand, NL.IMBAG.Nummeraanduiding, NL.IMKAD.KadastraalObject of NL.IMGeo.

|===






[[Aftakking]]
== Aftakking

_splitsing van de wikkeling van een transformator_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&bijlage=3&z=2023-04-01&g=2023-04-01[mce:bijlage=3&z=2023-04-01&g=2023-04-01])

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/netcomponent[begrip:netcomponent]

Tijdlijnen: geldigheid, registratie, effectuering

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| in gebruik
| waar of onwaar [0..1]
a| _geeft aan of de aftakking wordt gebruikt_
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]nominale waarde
| reëel getal [0..1]
a| _hoeveelheid spanning of stroom waarvoor de aftakking is ontworpen, en die in combinatie met de waarde van de aftakking aan de andere zijde de overzetverhouding vormt_

Eenheid: volt (V) of ampère (A).
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]zijde
| <<local:Transformatorzijde,Transformatorzijde>> [0..1]
a| _aanduiding aan welke kant van de transformator de aftakking zich bevindt_

|===



.Relaties
[%autowidth.stretch]
|===
| Aftakking is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]deel van <<Meettransformator,Meettransformator>> [1..* → 1]
a| 

|===






[[Allocatiepunt]]
== Allocatiepunt

_https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/allocatiepunt[begrip:allocatiepunt]_

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| allocatiemethode
| <<local:Allocatiemethode,Allocatiemethode>> [0..1]
a| .Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037940&hoofdstuk=10&paragraaf=10.4&artikel=10.17&z=2023-06-10&g=2023-06-10[nce:hoofdstuk=10&paragraaf=10.4&artikel=10.17&z=2023-06-10&g=2023-06-10]
====
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]EAN-code
| tekst [1]
a| _unieke cijfercombinatie volgens de Europese Artikelnummer-standaard_

Validatie: bij primair allocatiepunt gelijk aan EAN-code aansluiting, bij secundair ongelijk.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037940&hoofdstuk=2&paragraaf=2.1&artikel=2.4&z=2022-11-25&g=2022-11-25[nce:hoofdstuk=2&paragraaf=2.1&artikel=2.4&z=2022-11-25&g=2022-11-25]
====
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]profielcategorie
| tekst [0..1]
a| _groep allocatiepunten waarvoor een reeks profielfracties wordt vastgesteld_

Ook bekend als 'afnamecategorie'.

Voorbeelden van mogelijke waarden zijn E1A, E1B, E1C, E2A, E2B, E4A, G1A, G2A, G2C, GGV, GIN, GIS, GKV, GMN en GXX.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037938&hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25[bce:hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037923&hoofdstuk=1&artikel=1.1&z=2021-06-01&g=2021-06-01[bcg:hoofdstuk=1&artikel=1.1&z=2021-06-01&g=2021-06-01]
====

|===








[[Allocatiepunt-bij-aansluiting]]
== Allocatiepunt bij aansluiting

_allocatiepunt toegekend aan een aansluiting_

Specialisatie van <<Allocatiepunt,Allocatiepunt>>






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]administratieve status van meetinrichting
| <<local:Aan-of-uit,Aan of uit>> [0..1]
a| _geeft weer of de aangeslotene de mogelijkheid om de meter op afstand uit te lezen administratief heeft laten uitzetten_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.4&z=2022-12-20&g=2022-12-20[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.4&z=2022-12-20&g=2022-12-20]
====
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]blokkade
| <<local:Blokkade,Blokkade>> [0..1]
a| _geeft weer of het allocatiepunt en de bijbehorende aansluiting is geblokkeerd voor de automatische verwerking van mutatieprocessen als bedoeld in Hoofdstuk 4 van de Informatiecode elektriciteit en gas_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=4&z=2023-03-18&g=2023-03-18[iceg:hoofdstuk=4&z=2023-03-18&g=2023-03-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.12&z=2023-03-18&g=2023-03-18[iceg:hoofdstuk=2&paragraaf=2.12&z=2023-03-18&g=2023-03-18]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=1&paragraaf=1.1&artikel=1.1.14&z=2023-03-18&g=2023-03-18[iceg:hoofdstuk=1&paragraaf=1.1&artikel=1.1.14&z=2023-03-18&g=2023-03-18]
====
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]fysieke status
| <<local:Fysieke-status-allocatiepunt,Fysieke status allocatiepunt>> [0..1]
a| _toestand van door de netbeheerder en eventuele meetverantwoordelijke beheerde onderdelen die samen energie-uitwisseling op het allocatiepunt mogelijk maken_

Validatie: bij een bemeten kleinverbruikaansluiting zonder meter is geen overgang mogelijk naar 'in bedrijf'.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====
| maand verbruiksbepaling
| geheel getal [0..1]
a| _maand waarin de verbruiksbepaling plaatsvindt_

Waarde in het bereik 1-12 conform ISO 8601.

Validatie: in geval van een aansluiting waarbij eenmaal per jaar het verbruik wordt bepaald.
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]reden uit bedrijf
| <<local:Reden-uit-bedrijf,Reden uit bedrijf>> [0..1]
a| _verklaring van het uit bedrijf zijn van één of meer onderdelen zodat energie-uitwisseling op het allocatiepunt onmogelijk is_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0030164&paragraaf=1&artikel=1a&z=2023-04-01&g=2023-04-01[rakveg:paragraaf=1&artikel=1a&z=2023-04-01&g=2023-04-01]
====
| type
| <<local:Type-allocatiepunt-bij-aansluiting,Type allocatiepunt bij aansluiting>> [0..1]
a| _geeft weer of het allocatiepunt primair of secundair is_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037938&hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25[bce:hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25])
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]wijze uit bedrijf
| <<local:Wijze-uit-bedrijf,Wijze uit bedrijf>> [0..1]
a| _manier waarop één of meer onderdelen uit bedrijf zijn genomen zodat energie-uitwisseling op het allocatiepunt onmogelijk is_
| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]wijze van bemeting
| <<local:Wijze-van-bemeting,Wijze van bemeting>> [0..1]
a| _manier waarop het allocatiepunt is bedoeld om te worden bemeten_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====

|===



.Relaties
[%autowidth.stretch]
|===
| Allocatiepunt bij aansluiting is ... | Omschrijving

| toegekend aan <<Aansluiting,Aansluiting>> [1..* → 1]
a| 

|===






[[Allocatiepunt-bij-netgebied]]
== Allocatiepunt bij netgebied

_allocatiepunt toegekend aan een netgebied_

Specialisatie van <<Allocatiepunt,Allocatiepunt>>






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| type
| <<local:Type-allocatiepunt-bij-netgebied,Type allocatiepunt bij netgebied>> [0..1]
a| _geeft weer bij welke vorm van netverlies het allocatiepunt hoort_

Validatie: per netgebied en type is er maximaal één allocatiepunt.

|===



.Relaties
[%autowidth.stretch]
|===
| Allocatiepunt bij netgebied is ... | Omschrijving

| toegekend aan <<Netgebied,Netgebied>> [1..* → 1]
a| 

|===








[[Groep-van-strengen-van-lichtmasten]]
== Groep van strengen van lichtmasten

_verzameling van strengen van lichtmasten waarvan de aansluitingen eventueel ongeïdentificeerde overdrachtspunten bevatten_

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluitlocatie[begrip:aansluitlocatie]

Voorheen werden zogenaame 'virtuele aansluitingen' geregistreerd (DIM). Dit register staat alleen de registratie van echte aansluitingen toe. De mooiste manier om een streng van lichtmasten te registreren, is als één aansluiting met één primair allocatiepunt en een overdrachtspunt per lichtmast. Is het aantal strengen bekend maar niet de verdeling van lichtmasten over die strengen, dan als één aansluiting/allocatiepunt/overdrachtspunt per streng, met al deze aansluitingen gegroepeerd in een groep van strengen van lichtmasten. Is het ook het aantal strengen niet bekend, dan als één aansluiting/allocatiepunt/overdrachtspunt. Al deze varianten leiden tot eenzelfde nettarief, volgens de afleidingsregels in het tarievenregister.

Tijdlijnen: geldigheid, registratie, effectuering

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037951&hoofdstuk=3&paragraaf=3.3&artikel=3.3.3&z=2022-05-18&g=2022-05-18[tce:hoofdstuk=3&paragraaf=3.3&artikel=3.3.3&z=2022-05-18&g=2022-05-18]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| totaal aantal overdrachtspunten
| geheel getal [0..1]
a| _som van het aantal overdrachtspunten van alle strengen in de groep, zowel de in dit register geïdentificeerde als niet-geïdentificeerde overdrachtspunten_

Gemeenten weten het aantal lichtmasten niet altijd per streng (of 'voedingspunt') op te geven.

|===



.Relaties
[%autowidth.stretch]
|===
| Groep van strengen van lichtmasten is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]in rekening te brengen bij <<Aansluiting,Aansluiting>> [0..1 → 1]
a| 

|===












[[Meettransformator]]
== Meettransformator

_elektrisch apparaat dat wordt toegepast voor het verlagen van spanning of stroom zodat deze gemeten kan worden_

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/netcomponent[begrip:netcomponent]

Tijdlijnen: geldigheid, registratie, effectuering

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| fabrikant
| tekst [0..1]
a| _bedrijf dat industrieel goederen vervaardigt_
| meetbereik bovengrens
| reëel getal{nbsp}(V.A) [0..1]
a| _maximale belasting waarbij de meettransformator de maximaal toelaatbare meetfout behorend bij de nauwkeurigheidsklasse niet overschrijdt_
| meetbereik ondergrens
| reëel getal{nbsp}(V.A) [0..1]
a| _minimale belasting waarbij de meettransformator de maximaal toelaatbare meetfout behorend bij de nauwkeurigheidsklasse niet overschrijdt_
| nauwkeurigheidsklasse
| <<local:Nauwkeurigheidsklasse,Nauwkeurigheidsklasse>> [0..1]
a| _gestandaardiseerde cijfercode waarmee men de maximaal toelaatbare meetfout van meetapparatuur definieert_
| nominaal vermogen
| reëel getal{nbsp}(V.A) [0..1]
a| _maximaal vermogen bij continu gebruik waarbij een maximaal rendement wordt behaald_
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]serienummer
| tekst [0..1]
a| _code die door de fabrikant aan een exemplaar uit een reeks producten wordt gegeven_
| soort schakeling
| <<local:Soort-schakeling,Soort schakeling>> [0..1]
a| _aanduiding van een verzameling schakelingen die een gemeenschappelijk karakter hebben_
| typeaanduiding
| tekst [0..1]
a| _naam die door een fabrikant aan een reeks producten met vergelijkbare eigenschappen wordt gegeven_

|===



.Relaties
[%autowidth.stretch]
|===
| Meettransformator is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]deel van <<Primair-deel-elektriciteitsmeetinrichting,Primair deel elektriciteitsmeetinrichting>> [* → 1]
a| 

|===






[[Netgebied]]
== Netgebied

_https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/netgebied[begrip:netgebied]_

Tijdlijnen: geldigheid, registratie, effectuering

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]EAN-code
| tekst [1]
a| _unieke cijfercombinatie volgens de Europese Artikelnummer-standaard_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====
| energiedrager
| <<local:Energiedrager,Energiedrager>> [0..1]
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/energiedrager[begrip:energiedrager]_
| naam
| tekst [0..1]
a| _woord of combinatie van woorden waarmee een netgebied wordt aangeduid_

|===



.Relaties
[%autowidth.stretch]
|===
| Netgebied is ... | Omschrijving

| beheerd door https://modellen.netbeheernederland.nl/marktpartijenregister#Marktpartijsubregistratie[Marktpartijsubregistratie] (Marktpartijenregister) [* → 1]
a| 

|===






[[Netkoppeling]]
== Netkoppeling

_recht op het gebruik van één of meer verbindingen tussen twee energienetten of tussen een energienet en een interconnector_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037923&hoofdstuk=1&artikel=1.1&z=2021-06-01&g=2021-06-01[bcg:hoofdstuk=1&artikel=1.1&z=2021-06-01&g=2021-06-01])

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluiting[begrip:aansluiting]

Een koppeling met een gesloten distributiesysteem wordt in dit register beschouwd als netkoppeling als de beheerder gebruik maakt van het elektronische berichtenverkeer ten behoeve van het faciliteren van derdentoegang (zie artikel 2.4, vierde lid van de Netcode elektriciteit).

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]EAN-code
| tekst [1]
a| _unieke cijfercombinatie volgens de Europese Artikelnummer-standaard_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2022-05-18&g=2022-05-18]
====

|===



.Relaties
[%autowidth.stretch]
|===
| Netkoppeling is ... | Omschrijving

| deel van <<Netgebied,Netgebied>> [* → 1]
a| De beheerder van het netgebied waartoe de netkoppeling behoort, is de beheerder van de netkoppeling.
| koppeling met <<Netgebied,Netgebied>> [* → 0..1]
a| Deze relatie is optioneel voor het geval er geen sprake is van een gekoppeld netgebied, zoals bij een koppeling met een interconnector.

|===








[[Overdrachtspunt]]
== Overdrachtspunt

_https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/overdrachtspunt[begrip:overdrachtspunt]_

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| pass:[<span title="Persoonsgegeven">👤</span>&nbsp;]aansluitcapaciteit
| <<local:Niet-numerieke-aansluitcapaciteit,Niet-numerieke aansluitcapaciteit>>{nbsp}en/of{nbsp}reëel getal [0..1]
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluitcapaciteit[begrip:aansluitcapaciteit]_

Bij een klein overdrachtspunt voor elektriciteit aangeduid als het aantal fasen vermenigvuldigd met de nominale waarde van de overstroombeveiliging per fase. Bijvoorbeeld 3x25 (eenheid: A) of klein (indien onbekend).

Bij een klein overdrachtspunt voor gas aangeduid met de code G4, G6, G10, G16, G25 of klein (indien onbekend).

Bij een groot overdrachtspunt voor elektriciteit een geheel getal (eenheid: kVA) of groot (indien onbekend).

Bij een groot overdrachtspunt voor gas een geheel getal (eenheid: m3(n)/uur) of groot (indien onbekend).
| aansluitspanning of leveringsdruk
| reëel getal [0..1]
a| _nominale spanning of druk op het overdrachtspunt_

Eenheid: volt (V) of bar.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037940&hoofdstuk=13&paragraaf=13.1&artikel=13.1&z=2023-06-10&g=2023-06-10[nce:hoofdstuk=13&paragraaf=13.1&artikel=13.1&z=2023-06-10&g=2023-06-10]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28]
====
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]EAN-code
| tekst [1]
a| _unieke cijfercombinatie volgens de Europese Artikelnummer-standaard_

Voor een goede informatiehuishouding is het essentieel dat de identificatie van een fysiek object niet verandert zolang dat fysieke object bestaat. De EAN-code van een overdrachtspunt mag dus nooit wijzigen, in tegenstelling tot de EAN-code van een aansluiting of allocatiepunt.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037940&hoofdstuk=2&paragraaf=2.1&artikel=2.4&z=2022-11-25&g=2022-11-25[nce:hoofdstuk=2&paragraaf=2.1&artikel=2.4&z=2022-11-25&g=2022-11-25]
====
| energierichting
| <<local:Energierichting,Energierichting>> [0..1]
a| _richting waarin energie kan stromen over het overdrachtspunt_

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/energierichting[begrip:energierichting]

Voor elektriciteit geldt over het algemeen: combinatie. Voor gas geldt over het algemeen: indien profielcategorie GIS of GIN dan invoeding anders afname.

De betekenis van het historische 'leveringsrichting' was net iets anders: de richting waarin de energie niet mogelijk maar daadwerkelijk stroomt. Energieleveranciers wisten dan wat ze konden verwachten. Dat gegeven is echter afleidbaar uit het energie-uitwisselingsregister en eventueel installatieregister.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2023-04-01&g=2023-04-01[iceg:hoofdstuk=2&paragraaf=2.1&artikel=2.1.3&z=2023-04-01&g=2023-04-01]
====
| leveringsdruk gegarandeerd
| waar of onwaar [0..1]
a| _geeft aan of door een aangeslotene een vaste druk is aangevraagd op het overdrachtspunt_

Bij een vaste druk bevat de aansluitverbinding een drukregelaar.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28]
====
| waarde hoofdzekering
| reëel getal{nbsp}(A) [0..1]
a| _maximale stroomsterkte die de algemene veiligheid op de aansluitverbinding toelaat._

In geval van een door de netbeheerder geplaatste LS-hoofdzekering.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28]
====

|===



.Relaties
[%autowidth.stretch]
|===
| Overdrachtspunt is ... | Omschrijving

| deel van óf <<Aansluiting,Aansluiting>>{nbsp}óf <<Netkoppeling,Netkoppeling>> [1..* → 1]
a| 
| in <<Aansluitlocatie,Aansluitlocatie>> [1..* → 1]
a| 

|===










[[Primair-deel-elektriciteitsmeetinrichting]]
== Primair deel elektriciteitsmeetinrichting

_eventueel aanwezige spannings- en stroommeettransformatoren met inbegrip van de aansluitklemmen waarop het secundaire deel van de meetinrichting is aangesloten_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037938&hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25[bce:hoofdstuk=1&artikel=1.1&z=2022-11-25&g=2022-11-25])

Specialisatie van <<Primair-deel-meetinrichting,Primair deel meetinrichting>>






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| aantal meetkabels
| geheel getal [0..1]
a| _totale hoeveelheid kabels waaruit de primaire bekabeling van de meetcircuits bestaan, waarbij een kabel een samenstel is van een of meer geïsoleerde elektrische leidingen met een gezamenlijke mantel_
| soort meetzekering
| <<local:Soort-meetzekering,Soort meetzekering>> [0..1]
a| _aanduiding van een verzameling meetzekeringen die een gemeenschappelijk karakter hebben_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25])

In afwijking van de Meetcode elektriciteit spreken we niet van 'smeltveiligheid' om ook zekeringen die niet smelten in te sluiten.
| toegang vereist
| waar of onwaar [0..1]
a| _geeft weer of essentiële onderdelen van de meetinrichting zijn geplaatst in een aan de netbeheerder ter beschikking staande ruimte die niet vrij toegankelijk is voor de meetverantwoordelijke_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.1&artikel=4.3.1.1&z=2023-04-01&g=2023-04-01[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.1&artikel=4.3.1.1&z=2023-04-01&g=2023-04-01])
| trafocorrectiefactor
| reëel getal [0..1]
a| _factor waarmee vermenigvuldigd moet worden om de meetwaarde te corrigeren voor energieverlies in de MS/LS-transformator, indien deze zich bevindt tussen het overdrachtspunt en het meetpunt_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.1&artikel=4.3.1.3&z=2022-10-25&g=2022-10-25[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.1&artikel=4.3.1.3&z=2022-10-25&g=2022-10-25])
| waarde meetzekering
| reëel getal{nbsp}(A) [0..1]
a| _waarde van de meetzekering in de spanningsmeetcircuits_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2022-10-25&g=2022-10-25])

In afwijking van de Meetcode elektriciteit spreken we niet van 'smeltveiligheid' om ook zekeringen die niet smelten in te sluiten.

|===








[[Primair-deel-gas-of-waterstofmeetinrichting]]
== Primair deel gas- of waterstofmeetinrichting

_hulpmiddelen bij een gasaansluiting waarop het secundaire deel van de meetinrichting is aangesloten_

Specialisatie van <<Primair-deel-meetinrichting,Primair deel meetinrichting>>

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28]
====






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| flensafstand
| reëel getal{nbsp}(mm) [0..1]
a| _afstand tussen de flenzen waartussen het secundaire gedeelte van de meetinrichting kan worden geplaatst_

Ook bekend als inbouwmaat.
| flensdrukklasse
| <<local:Flensdrukklasse,Flensdrukklasse>> [0..1]
a| _maximale druk die de flenzen, waartussen het secundaire gedeelte van de meetinrichting geplaatst kan worden, kunnen weerstaan bij een bepaalde temperatuur_
| flensmaat
| <<local:Flensmaat,Flensmaat>> [0..1]
a| _aanduiding van de ruimtelijke maten van de flenzen waartussen het secundaire gedeelte van de meetinrichting kan worden geplaatst_
| geregelde meetdruk
| reëel getal{nbsp}(mbar) [0..1]
a| _spanning van het gas of de waterstof, indien deze speciaal ten behoeve van het secundaire gedeelte van de meetinrichting wordt geregeld_
| meetdruk geregeld
| waar of onwaar [0..1]
a| _aanduiding of de druk speciaal ten behoeve van het secundair gedeelte van de meetinrichting wordt geregeld_
| schroefdraaddiameter
| reëel getal{nbsp}([in_i]) [0..1]
a| _doorsnede van het schroefdraad waarop het secundaire gedeelte van de meetinrichting kan worden geplaatst_

Het secundaire gedeelte van de meetinrichting wordt óf op een schroefdraad óf tussen twee flenzen geplaatst.

|===








[[Primair-deel-meetinrichting]]
== Primair deel meetinrichting

_hulpmiddelen bij een aansluiting waarop het secundaire deel van de meetinrichting is aangesloten_

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/netcomponent[begrip:netcomponent]

De naam 'primair deel meetinrichting' kan verwarrend zijn omdat het volgens de Energiewet om hulpmiddelen bij de aansluiting gaat (beheerd door de netbeheerder), niet om een deel van de meetinrichting (beheerd door de meetverantwoordelijke, ook wel het 'secundaire deel' genoemd).

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| fysieke status
| <<local:Fysieke-status-primair-deel-meetinrichting,Fysieke status primair deel meetinrichting>> [0..1]
a| _aanduiding van de toestand met betrekking tot het daadwerkelijk aanwezig zijn van het primair gedeelte van de meetinrichting_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28]
====
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]identificatie
| tekst [0..1]
a| _per overdrachtspunt unieke identificatie van het primair gedeelte van de meetinrichting_

Indien van toepassing, gelijk aan de aanduiding van het veld of de meetstraat.

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.8&z=2023-04-01&g=2023-04-01[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.8&z=2023-04-01&g=2023-04-01]
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.5&z=2023-06-28&g=2023-06-28]
====

|===



.Relaties
[%autowidth.stretch]
|===
| Primair deel meetinrichting is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]bij <<Overdrachtspunt,Overdrachtspunt>> [* → 1]
a| 

|===






[[Primaire-meetkabel]]
== Primaire meetkabel

_kabel tussen meettransformator en aansluitklemmen_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28[iceg:hoofdstuk=2&paragraaf=2.11&artikel=2.11.4&z=2023-06-28&g=2023-06-28])

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/netcomponent[begrip:netcomponent]

Tijdlijnen: geldigheid, registratie






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| aantal aders
| geheel getal [0..1]
a| _hoeveelheid elektrisch geleidende draden_
| aderdoorsnede
| reëel getal{nbsp}(mm2) [0..1]
a| _oppervlakte van een elektrisch geleidende draad bij een doorsnijding loodrecht op de lengterichting_
| lengte
| reëel getal{nbsp}(m) [0..1]
a| _afmeting van de grootste kant van de kabel_

|===



.Relaties
[%autowidth.stretch]
|===
| Primaire meetkabel is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]verbonden met <<Meettransformator,Meettransformator>> [1 → 1]
a| 

|===






[[Spanningsmeettransformator]]
== Spanningsmeettransformator

_elektrisch apparaat dat wordt toegepast voor het verlagen van spanning zodat deze gemeten kan worden_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2023-04-01&g=2023-04-01[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2023-04-01&g=2023-04-01])

Specialisatie van <<Meettransformator,Meettransformator>>






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| thermisch grensvermogen
| reëel getal{nbsp}(V.A) [0..1]
a| _maximaal complex vermogen dat de transformator permanent kan leveren zonder de in de normen vastgelegde temperatuurlimieten te overschrijden_

Ook wel bekend als rated thermal limiting output (Sth).

|===










[[Stroommeettransformator]]
== Stroommeettransformator

_elektrisch apparaat dat wordt toegepast voor het verlagen van stroom zodat deze gemeten kan worden_ (zie https://wetten.overheid.nl/jci1.3:c:BWBR0037946&hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2023-04-01&g=2023-04-01[mce:hoofdstuk=4&paragraaf=4.3&sub-paragraaf=4.3.2&artikel=4.3.2.4&z=2023-04-01&g=2023-04-01])

Specialisatie van <<Meettransformator,Meettransformator>>






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| overbelastbaarheid
| reëel getal{nbsp}(%) [0..1]
a| _maximale continue belasting van de meettransformator die geen schade veroorzaakt, uitgedrukt als factor van de nominale belasting - 100%_
| overstroomfactor
| reëel getal [0..1]
a| _verhouding van de primaire kortsluitstroom en de primaire nominale stroom van de stroomtransformator_

Ook bekend als factor of security (FS) en instrumentsveiligheidsfactor.

|===










[[Tarieftoepassing]]
== Tarieftoepassing

_tariefregel die voor een aansluiting vastlegt welke tariefcomponent geldt en hoe vaak deze in rekening wordt gebracht_

Breder: https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/aansluiting[begrip:aansluiting]

De afleidingsregels staan in het tarievenregister.

De methode in artikel 8.1.6 van de Informatiecode elektriciteit en gas houdt geen rekening met de grote variatie in het aantal overdrachtspunten zoals bij strengen van lichtmasten (artikel 3.3.3 van de Tarievencode elektriciteit). Dit register doet dat wel door niet naar het totaaltarief maar de tariefcomponenten te linken.

Tijdlijnen: geldigheid, registratie, effectuering






.Eigenschappen
[%autowidth.stretch]
|===
| Eigenschap | Waardespecificatie | Omschrijving

| aantal
| geheel getal [0..1]
a| _getal waarmee het bedrag van de tariefcomponent vermenigvuldigd moet worden_

De afleidingsregels staan in het tarievenregister.

|===



.Relaties
[%autowidth.stretch]
|===
| Tarieftoepassing is ... | Omschrijving

| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]op https://modellen.netbeheernederland.nl/tarievenregister#Tariefcomponent[Tariefcomponent] (Tarievenregister) [* → 1]
a| 
| pass:[<span title="Maakt deel uit van de identificatie">🔑</span>&nbsp;]van <<Aansluiting,Aansluiting>> [* → 1]
a| 

|===











'''
[discrete]
== Waardelijsten


[[local:Aan-of-uit]]
[discrete]
=== Aan of uit



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| aan
a| 
| uit
a| 
|===




[[local:Allocatiemethode]]
[discrete]
=== Allocatiemethode



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| PRF
a| _profielallocatie_
| SMA
a| _slimme-meterallocatie_
| TMT
a| _telemetrie_
|===




[[local:Blokkade]]
[discrete]
=== Blokkade



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| aangeslotene
a| _de aangeslotene heeft om de blokkade verzocht_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.12&artikel=2.12.1&z=2023-03-18&g=2023-03-18[iceg:hoofdstuk=2&paragraaf=2.12&artikel=2.12.1&z=2023-03-18&g=2023-03-18]
====
| geen
a| _er is geen blokkade_
| leveringszekerheid
a| _er is een blokkade vanwege het Besluit leveringszekerheid Elektriciteitswet 1998 of het Besluit leveringszekerheid Gaswet_
| tijdelijk opgeheven
a| _de door aangeslotene verzochte blokkade is door een daartoe gemandateerde leverancier tijdelijk opgeheven_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037934&hoofdstuk=2&paragraaf=2.12&artikel=2.12.3&z=2023-03-18&g=2023-03-18[iceg:hoofdstuk=2&paragraaf=2.12&artikel=2.12.3&z=2023-03-18&g=2023-03-18]
====
|===




[[local:Energiedrager]]
[discrete]
=== Energiedrager



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| elektriciteit
a| 
| gas
a| 
| waterstof
a| 
|===




[[local:Energierichting]]
[discrete]
=== Energierichting



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| afname
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/afname[begrip:afname]_
| combinatie
a| _afname en invoeding_
| invoeding
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/invoeding[begrip:invoeding]_
|===




[[local:Flensdrukklasse]]
[discrete]
=== Flensdrukklasse



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| onbekend
a| 
| PN10
a| 
| PN12
a| 
| PN16
a| 
| PN6
a| 
|===




[[local:Flensmaat]]
[discrete]
=== Flensmaat



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| DN10
a| 
| DN100
a| 
| DN125
a| 
| DN15
a| 
| DN150
a| 
| DN20
a| 
| DN200
a| 
| DN25
a| 
| DN250
a| 
| DN300
a| 
| DN32
a| 
| DN350
a| 
| DN40
a| 
| DN400
a| 
| DN50
a| 
| DN500
a| 
| DN600
a| 
| DN65
a| 
| DN80
a| 
| onbekend
a| 
|===




[[local:Fysieke-status-allocatiepunt]]
[discrete]
=== Fysieke status allocatiepunt



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| in aanleg
a| 
| in bedrijf
a| 
| uit bedrijf
a| 
|===




[[local:Fysieke-status-primair-deel-meetinrichting]]
[discrete]
=== Fysieke status primair deel meetinrichting



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| in aanleg
a| 
| in bedrijf
a| 
|===




[[local:Marktsegment]]
[discrete]
=== Marktsegment



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| grootverbruikaansluiting
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/grootverbruikaansluiting[begrip:grootverbruikaansluiting]_
| kleinverbruikaansluiting
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/kleinverbruikaansluiting[begrip:kleinverbruikaansluiting]_
|===




[[local:Nauwkeurigheidsklasse]]
[discrete]
=== Nauwkeurigheidsklasse



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| 0,1
a| 
| 0,2
a| 
| 0,2S
a| 
| 0,3
a| 
| 0,5
a| 
| 0,5S
a| 
| 1
a| 
| 2
a| 
| 3
a| 
| 5
a| 
| onbekend
a| 
|===




[[local:Niet-numerieke-aansluitcapaciteit]]
[discrete]
=== Niet-numerieke aansluitcapaciteit



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| 1x10
a| 
| 1x25
a| 
| 1x35
a| 
| 1x50
a| 
| 1x6
a| 
| 1x63
a| 
| 1x80
a| 
| 3x25
a| 
| 3x35
a| 
| 3x50
a| 
| 3x63
a| 
| 3x80
a| 
| G10
a| 
| G16
a| 
| G25
a| 
| G4
a| 
| G6
a| 
| groot
a| 
| klein
a| 
|===




[[local:Reden-uit-bedrijf]]
[discrete]
=== Reden uit bedrijf



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| anders
a| 
| fraude
a| 
| klantverzoek
a| 
| leegstand
a| 
| veiligheid
a| 
| wanbetaling
a| 
|===




[[local:Soort-meetzekering]]
[discrete]
=== Soort meetzekering



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| anders
a| 
| automaat
a| 
| buiszekering
a| 
| diazed
a| 
| glaszekering
a| 
| mespatroon
a| 
| onbekend
a| 
|===




[[local:Soort-schakeling]]
[discrete]
=== Soort schakeling



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| drieleider
a| 
| dzY
a| 
| onbekend
a| 
| vierleider
a| 
| YY secundair geaard
a| 
| Yyd
a| 
|===




[[local:Technische-grootte]]
[discrete]
=== Technische grootte



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| grote aansluiting
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/grote-aansluiting[begrip:grote-aansluiting]_
| kleine aansluiting
a| _https://begrippen.netbeheernederland.nl/energiesysteembeheer/nl/page/kleine-aansluiting[begrip:kleine-aansluiting]_
|===




[[local:Transformatorzijde]]
[discrete]
=== Transformatorzijde



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| primair
a| _zijde met de hoogste nominale spanning of stroom_
| secundair
a| _zijde met de laagste nominale spanning of stroom_
|===




[[local:Type-allocatiepunt-bij-aansluiting]]
[discrete]
=== Type allocatiepunt bij aansluiting



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| PAP
a| _primair allocatiepunt_
| SAP
a| _secundair allocatiepunt_
|===




[[local:Type-allocatiepunt-bij-netgebied]]
[discrete]
=== Type allocatiepunt bij netgebied



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| GMN
a| _netverlies gas_

.Zie ook
[%collapsible]
====
* https://wetten.overheid.nl/jci1.3:c:BWBR0037931&hoofdstuk=4&paragraaf=4.3&artikel=4.3.1.12&z=2023-03-18&g=2023-03-18[acg:hoofdstuk=4&paragraaf=4.3&artikel=4.3.1.12&z=2023-03-18&g=2023-03-18]
====
| NVB
a| _netverlies door transportonafhankelijk netverbruik_
| NVL
a| _netverlies elektriciteit_
| OVB
a| _netverlies door onbetaald verbruik_
| TVB
a| _netverlies door transportverbruik_
|===




[[local:Wijze-uit-bedrijf]]
[discrete]
=== Wijze uit bedrijf



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| binnen
a| 
| buiten
a| 
|===




[[local:Wijze-van-bemeting]]
[discrete]
=== Wijze van bemeting



[%autowidth.stretch]
|===
| Waarde | Omschrijving

| anders bemeten
a| 
| jaarlijks
a| 
| maandelijks
a| 
| niet continu
a| 
| onbekend
a| 
| onbemeten
a| 
| telemetrie
a| 
|===

